# gRPCpeek

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: build-release.yml
docs/screenshots/: README.md
grpcpeek/: .eslintrc.json  .gitignore  README.md
grpcpeek/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  test-parser.js  vite.config.ts
grpcpeek/frontend/src/: App.tsx  index.css  main.tsx
grpcpeek/frontend/src/components/: ErrorBoundary.tsx  ModalRenderer.tsx
grpcpeek/frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  IconButton.tsx  Input.tsx  Label.tsx  MethodTypeBadge.tsx  ProtoParserTest.tsx  Select.tsx  Skeleton.tsx  Textarea.tsx  Toast.tsx  index.ts
grpcpeek/frontend/src/components/workspace/: ClientStreamingEditor.tsx  CollectionsTree.tsx  CommandPalette.tsx  CreateEnvironmentModal.tsx  CreateWorkspaceModal.tsx  EnvironmentEditorModal.tsx  EnvironmentSelector.tsx  GlobalVariablesModal.tsx  HeaderBar.tsx  ImportPathManager.tsx  KeyboardShortcutsModal.tsx  RequestEditor.tsx  RequestHeader.tsx  RequestHistory.tsx  RequestTabs.tsx  ResponseMetadata.tsx  ResponseViewer.tsx  SaveRequestModal.tsx  SavedRequestsList.tsx  ServicesList.tsx  SettingsModal.tsx  Sidebar.tsx  StreamingResponsePanel.tsx  VariableHighlightedTextarea.tsx  VariableIndicator.tsx  WorkspaceSelector.tsx  WorkspaceSettingsModal.tsx
grpcpeek/frontend/src/contexts/: ModalContext.tsx  ToastContext.tsx
grpcpeek/frontend/src/hooks/: useKeyboardShortcuts.ts  useModals.ts  useRequestManager.ts  useWorkspaceManager.ts
grpcpeek/frontend/src/lib/: cn.ts  protoParser.ts  variableResolver.ts  workspace.ts
grpcpeek/frontend/src/types/: workspace.ts
grpcpeek/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
grpcpeek/src-tauri/icons/: icon.icns
grpcpeek/src-tauri/src/: bin_test.rs  main.rs  proto_parser.rs
scripts/: bump-version.sh
test-server/: README.md  package-lock.json  package.json  server.js  test.proto
test-server/certs/: .gitignore  README.md  generate-certs.bat  generate-certs.sh
test-server/proto/common/: types.proto
test-server/proto/models/: order.proto  product.proto  user.proto
test-server/proto/parent/models/: order.proto  product.proto  user.proto
test-server/proto/parent/services/: auth.proto  echo.proto  hello.proto  shop.proto  user.proto
test-server/proto/services/: auth.proto  chat.proto  shop.proto  user.proto
