[package]
name = "grpcpeek"
version = "0.1.0"
description = "A modern gRPC client"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.12"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
tokio-stream = "0.1"
tower = "0.4"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
hyper = { version = "0.14", features = ["client", "http2"] }
http = "0.2"
bytes = "1.0"
prost-reflect = { version = "0.12", features = ["serde"] }
tempfile = "3.0"
tokio-process = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
